<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <Button
        android:id="@+id/back_button"
        android:drawableStart="@drawable/undo"
        android:scaleType="fitCenter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:layout_marginVertical="20dp"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <LinearLayout
        android:id="@+id/grid_dimension_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/back_button"
        app:layout_constraintBottom_toTopOf="@+id/menu_options"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent" >

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/grid_dimension_container"
            android:name="com.group_name.connectfourgame.fragments.GridDimensionFragment"
            app:layout_constraintWidth_max="200dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/grid_dimension_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            style="@style/StyleRegularButton"
            android:text="@string/text_save" />
    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8" />

    <LinearLayout
        android:id="@+id/menu_options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/guideline1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/grid_dimension_fragment">

        <Button
            android:id="@+id/option_game_settings"
            style="@style/StyleMenuOptions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/text_game_settings" />

        <Button
            android:id="@+id/option_user_profile"
            style="@style/StyleMenuOptions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/text_user_profile" />

        <Button
            android:id="@+id/option_user_statistics"
            style="@style/StyleMenuOptions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/text_user_statistics" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>