<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="30dp"
    android:background="@drawable/section_card"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/create_user_form_header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/text_make_user"
        android:textColor="@color/black"
        android:textSize="26sp"
        android:fontFamily="@font/heading1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/form_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/form_avatar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/create_user_form_header">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/text_username"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/input_name"
            android:inputType="text"
            android:ellipsize="end"
            android:maxLines="1"
            android:fontFamily="@font/poppins_regular"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/form_avatar"
        app:layout_constraintTop_toBottomOf="@+id/form_username"
        app:layout_constraintBottom_toTopOf="@+id/form_preferred_disc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/text_avatar"
            android:textColor="@color/black"
            android:textSize="24sp" />
        <ImageView
            android:id="@+id/input_avatar"
            android:layout_width="128dp"
            android:layout_height="128dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/form_preferred_disc"
        app:layout_constraintTop_toBottomOf="@+id/form_avatar"
        app:layout_constraintBottom_toBottomOf="@id/guideline1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/text_disc_color"
            android:textColor="@color/black"
            android:textSize="20sp" />
        <LinearLayout
            android:id="@+id/preferred_disc_colors"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            <ImageView
                android:id="@+id/input_disc_color_1"
                android:src="@drawable/disc"
                android:layout_margin="10dp"
                android:layout_width="48dp"
                android:layout_height="48dp" />
            <ImageView
                android:id="@+id/input_disc_color_2"
                android:src="@drawable/disc"
                android:layout_margin="10dp"
                android:layout_width="48dp"
                android:layout_height="48dp" />
            <ImageView
                android:id="@+id/input_disc_color_3"
                android:src="@drawable/disc"
                android:layout_margin="10dp"
                android:layout_width="48dp"
                android:layout_height="48dp" />
        </LinearLayout>
    </LinearLayout>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8" />
    <Button
        android:id="@+id/back_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/save_button"
        android:text="@string/text_back"
        android:fontFamily="@font/poppins_medium"
        android:textColor="@color/white"
        android:background="@drawable/button_plate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/save_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/back_button"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/text_save"
        android:fontFamily="@font/poppins_medium"
        android:textColor="@color/white"
        android:background="@drawable/button_plate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/avatar_selection_modal"
        android:name="com.group_name.connectfourgame.fragments.AvatarSelectionFragment"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/disc_selection_modal"
        android:name="com.group_name.connectfourgame.fragments.DiscSelectionFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/save_button"
        app:layout_constraintTop_toBottomOf="@id/form_preferred_disc" />
</androidx.constraintlayout.widget.ConstraintLayout>