<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/section_card"
    android:orientation="horizontal"
    android:maxWidth="500dp"
    android:paddingHorizontal="10dp"
    android:layout_margin="20dp" >

    <TextView
        android:id="@+id/ranking_no"
        android:fontFamily="@font/heading1"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:layout_marginEnd="5dp"
        android:layout_gravity="center_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="10dp" >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <ImageView
                android:id="@+id/player_avatar"
                android:layout_width="80dp"
                android:layout_height="80dp" />
            <TextView
                android:id="@+id/player_name"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/poppins_medium"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="40dp" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/pvp_stats_collection"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/text_wins"
                style="@style/StyleMatchCounter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/pvp_wins_count"
                android:textColor="@color/black"
                style="@style/StyleMatchCounter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:text="@string/text_losses"
                style="@style/StyleMatchCounter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/pvp_loss_count"
                style="@style/StyleMatchCounter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black" />
            <TextView
                android:text="@string/text_draws"
                style="@style/StyleMatchCounter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/pvp_draw_count"
                android:textColor="@color/black"
                style="@style/StyleMatchCounter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>