<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/back_button"
        android:drawableStart="@drawable/undo"
        android:scaleType="fitCenter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:layout_marginVertical="20dp"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <!-- Grid Dimension -->
    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/grid_dimension_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:name="com.group_name.connectfourgame.fragments.GridDimensionFragment"
        app:layout_constraintTop_toBottomOf="@+id/back_button"
        app:layout_constraintBottom_toTopOf="@+id/pick_user_container"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Pick User -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/pick_user_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/grid_dimension_fragment"
        app:layout_constraintBottom_toTopOf="@+id/enter_game_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <LinearLayout
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/select_player2_container"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/select_player1_container"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/select_player1"
                style="@style/StyleRegularButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_select_p1" />
            <TextView
                android:text="@string/text_or"
                android:fontFamily="@font/poppins_italic"
                android:textSize="20sp"
                android:layout_marginVertical="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/select_player1_as_guest"
                style="@style/StyleRegularButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_guest" />
        </LinearLayout>

        <LinearLayout
            app:layout_constraintTop_toBottomOf="@+id/select_player1_container"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/select_player2_container"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/select_player2"
                style="@style/StyleRegularButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_select_p2" />

            <TextView
                android:text="@string/text_or"
                android:fontFamily="@font/poppins_italic"
                android:textSize="20sp"
                android:layout_marginVertical="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/select_player2_as_guest"
                style="@style/StyleRegularButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_guest" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/pick_user_profile"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/grid_dimension_fragment"
        app:layout_constraintBottom_toTopOf="@+id/enter_game_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/player1_user_profile"
            android:foregroundGravity="center"
            app:layout_constraintBottom_toTopOf="@id/player2_user_profile"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/player2_user_profile"
            android:foregroundGravity="center"
            app:layout_constraintTop_toBottomOf="@id/player1_user_profile"
            app:layout_constraintBottom_toBottomOf="@id/guideline1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.6" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <!-- Enter Game -->
    <Button
        android:id="@+id/enter_game_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_play"
        style="@style/StyleMenuOptions"
        android:background="@android:color/transparent"
        app:layout_constraintTop_toBottomOf="@+id/pick_user_container"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>